agregue varios archivos, todos mal

--- a/salidaTexto.html
+++ b/salidaTexto.html
@@ -1,14 +1,1 @@
-<html><div style = "color :blue"> Tipo de token y Token </div>
-COMENTARIO: //  Esto es un comentario
-VARIABLE: int
-VARIABLE: nombre_variable
-ASIGNACION: =
-ENTERO: 6
-VARIABLE: nombre_variable
-ASIGNACION: =
-PARENTESIS QUE ABRE:  (
-VARIABLE: otra_variable
-MULTIPLICACION: *
-ENTERO: 3
-PARENTESIS QUE CIERRA:  )
-COMENTARIO: //  Otro comentario para rematar<div style = "color: green"> Cantidad de Tokens:</div> 13</html>
+<html><div style = "color :blue"> Tipo de token y Token </div><span style = "color: 0F00E0">double</span> <span style = "color: no esta el elem">1</span> <span style = "color: 0F00E0">+</span> <span style = "color: 0F00E0">/</span> <span style = "color: no esta el elem">6</span> <span style = "color: 0F00E0">float</span> <span style = "color: no esta el elem">4.5</span> <span style = "color: 0F00E0">a</span> <span style = "color: no esta el elem">(</span> <span style = "color: no esta el elem">Otro</span> <div style = "color: 10EE00"> Cantidad de Tokens:</div> 10</html>
